fix(Menu): add inlineCollapsed mode

--- a/themes/components/menu.less
+++ b/themes/components/menu.less
@@ -1,5 +1,7 @@
 @menu-prefix: ~"@{prefix}menu";
 .@{menu-prefix} {
+  transition: 0.6s max-width;
+  max-width: 100%;
   display: block;
   margin: 0;
   padding: 0;
@@ -8,12 +10,38 @@
   font-size: @font-size-mini;
   position: relative;
   line-height: 1;
-  &-ul {
+  &-li{
+    position: relative;
+  }
+  &-show {
+    position: relative;
+    padding: 0px 26px;
+    height: 40px;
+    line-height: 40px;
+    cursor: pointer;
+    &-expand {
+      right: 20px;
+      font-size: 12px;
+      .middle();
+    }
+    &-desc {
+      transition: opacity,width .2s;
+    }
+
+    &-count{
+      right: 60px;
+      .middle();
+    }
+  }
+}
+
+.h-menu-mode-normal {
+  .h-menu-ul {
     max-height: 0;
     transition: max-height 0.3s cubic-bezier(0, 1, 0, 1);
     overflow: hidden;
   }
-  &-li{
+  .h-menu-li{
     >ul>li {
       >div {
         padding-left: 50px;
@@ -25,41 +53,33 @@
       }
     }
   }
-  &-li-opened>&-ul {
+  .h-menu-li-opened>.h-menu-ul {
     max-height: 1000px;
     transition: max-height 0.8s ease-in-out;
   }
-  &-li-opened>&-show &-show-expand>i{
+  .h-menu-li-opened>.h-menu-show .h-menu-show-expand>i{
     transform: rotate(0deg);
   }
-  &-show {
-    position: relative;
-    padding: 15px 26px;
-    cursor: pointer;
-    transition: @transition-time;
+  .h-menu-show {
+    transition: color @transition-time;
+    &-desc {
+      transition-delay: 0.3s;
+    }
     &-icon{
       margin-right: 5px;
     }
     &-expand {
-      font-size: 12px;
-      .middle();
-      right: 20px;
       >i{
-        transition: @transition-time;
+        transition: transform @transition-time;
         transform: rotate(-90deg);
       }
-    }
-
-    &-count{
-      .middle();
-      right: 60px;
     }
   }
 }
 
 .@{menu-prefix}-dark {
   background: @dark-color;
-  color: darken(@white-color, 20%);
+  color: darken(@white-color, 30%);
   .@{menu-prefix} {
     &-show {
       border-right: 0px solid transparent;
@@ -87,6 +107,9 @@
         color: @primary-color;
       }
     }
+    &-ul {
+      background: @white-color;
+    }
     &-li {
       position: relative;
       .@{menu-prefix}{
@@ -110,6 +133,75 @@
           }
         }
       }
+    }
+  }
+}
+
+
+.@{menu-prefix} {
+  &&-size-collapse {
+    max-width: 60px;
+    > .h-menu-li {
+      > .h-menu-show {
+        padding: 0px 22px;
+        .h-menu-show-icon{
+          font-size: 16px;
+          margin-right: 0px;
+          transition: .4s;
+        }
+        .h-menu-show-desc {
+          opacity: 0;
+          position: absolute;
+          width: 0;
+          text-overflow: clip;
+          transition-delay: 0s;
+        }
+        .h-menu-show-count{
+          right: 10px;
+        }
+        .h-menu-show-expand{
+          display: none;
+        }
+      }
+    }
+    .h-menu-ul{
+      padding: 0;
+      margin-left: 5px;
+      display: none;
+      left: 100%;
+      top: 0;
+      width: 0;
+      border-radius: 4px;
+      // visibility: hidden;
+      position: absolute;
+      // overflow: visible;
+      // transition: transform,opacity 0.2s;
+      // opacity: 0.5;
+      // transform: scale(0.5);
+    }
+    .h-menu-show-expand > i{
+      transform: rotate(-90deg);
+    }
+    .h-menu-li:hover {
+      > .h-menu-ul {
+        padding: 5px 0;
+        // opacity: 1;
+        // visibility: visible;
+        // transform: scale(1);
+        width: 150px;
+        display: block;
+        &:before{
+          content: '';
+          position: absolute;
+          height: 100%;
+          top: 0;
+          left: -10px;
+          width: 10px;
+        }
+      }
+    }
+    .h-menu-show {
+      padding-left: 20px;
     }
   }
 }
